Initial structure for testing

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <h1>HOME!</h1>
+    <h1>API CLIENTS</h1>
+    <p><strong>/clients/</strong> =>> POST, PUT, GET</p>
+    <p><strong>/clients/{id}</strong> =>> GET, DELETE</p>
 </body>
 </html>
